<resources>
    <!--    공통  -->
    <string name="agree">확인</string>
    <string name="cancel">취소</string>
    <string name="change">변경</string>
    <string name="review">리뷰</string>
    <string name="comment_register">리뷰 등록</string>
    <string name="chapter">회차</string>
    <string name="more">더보기</string>
    <string name="string_webNovel">웹소설</string>
    <string name="review_indicator_webNovel">웹소설을 읽고 리뷰를 작성해주세요</string>
    <string name="search">검색</string>


    <string name="sample_userName">홍길동</string>

    <!--정렬 옵션 -->
    // 리뷰 , 회차 정렬
    <string-array name="array_option">
        <item>최신순</item>
        <item>등록순</item>
    </string-array>
    // 웹소설 정렬
    <string-array name="array_BookOption">
        <item>최신순</item>
        <item>등록순</item>
        <item>인기순</item>
        <item>추천순</item>
    </string-array>

    <string name="first">최신순</string>
    <string name="old">등록순</string>
    <string name="popular">인기순</string>
    <string name="likes">추천순</string>
    <string name="filter">필터</string>
    <!-- 문자열 프로필 메뉴 -->

    <string name="image_from_camera">사진 찍기</string>
    <string name="image_from_gallery">앨범에서 불러오기</string>
    <!--채팅 페이지 -->
    <string name="chat_input">채팅 입력</string>
    <string name="chat_main">오픈 채팅</string>
    <string name="chat_room_open">오픈 채팅방</string>
    <string name="chat_room">채팅방</string>
    <string name="chat_room_name">채팅방 이름</string>
    <string name="chat_novel_tag">연관 웹소설</string>
    <string name="chat_room_introduce">소개</string>
    <string name="chat_room_introduce_input">소개 입력</string>
    <string name="chat_search">채팅방 검색</string>
    <string name="chat_create">채팅방 생성</string>
    <string name="chat_novel_tag_choose">선택</string>
    <string name="chat_password">비밀번호 설정</string>
    <string name="chat_password_input">비밀번호 입력</string>
    <string name="chat_room_join">채팅방 참가</string>
    <string name="chat_room_info">채팅방 정보</string>
    <string name="chat_send">전송</string>
    <string name="chat_novel_tag_info"> 이야기 하고 싶은 웹소설을 선택하세요.</string>
    <!-- 채팅방 검색 페이지 -->
    <string name="chat_room_already_join">참여중인 채팅방</string>

    <!--웹소설 정보 페이지 -->
    <string-array name="like_book">
        <item> 관심목록 등록 </item>
        <item>관심목록 해제 </item>
    </string-array>
    <string name="like_list">관심목록</string>
    <string name="view_novel">조회수</string>
    <string name="writer_novel">작가명</string>

    <string name="first_read_string">처음부터 보기</string>
    <string name="continue_read_string">이어서 보기</string>


    <string name="chapter_indicator_string">개의 회차가 등록되어 있습니다.</string>

    <string name="set_like_string">관심목록 등록</string>
    <string name="set_unlike_string">관심목록 해제</string>
    <!--리뷰 페이지-->
    <string name="review_regis">리뷰 등록</string>
    <string name="review_info">리뷰 정보</string>
    <string name="review_rating">점수</string>
    <string name="review_not_rating_indicator">웹소설을 읽고 리뷰를 등록 해주세요.</string>
    <string name="review_is_rating_indicator"> 리뷰를 남겼습니다.</string>
    <string name="review_rating_story">이야기 전개</string>
    <string name="review_rating_character">캐릭터 디자인</string>
    <string name="review_rating_world">세계 배경</string>
    <string name="review_rating_quality">글쓰기 품질</string>
    <string name="review_rating_update">업데이트 안정성</string>
    <string name="review_rating_total">종합 점수</string>

    <string name="hint_review">리뷰는 최소 20글자 이상 입력해야 합니다.</string>
    <string name="hint_summary">웹소설의 줄거리를 입력하세요.</string>


    <!--        웹소설 등록-->
    <string name="title_input_hint">( 3 ~ 20 ) 글자 이내로 입력하세요.</string>
    <string name="toolbar_title_write_main">웹소설 관리</string>
    <string name="title_text">제목</string>
    <string name="summary_text">줄거리</string>

    <string name="delete_text">삭제</string>
    <string name="delete_book_info">등록한 웹소설의 모든 정보가 삭제 됩니다.</string>
    <string name="delete_book_warn">정보가 삭제되면 복구할 수 없습니다.</string>


    <!-- 웹소설 설정 페이지 show text-->
    <string name="set_book_detail">설정 저장</string>
    <string name="set_book_info">상세설정</string>
    <string name="category_text">카테고리</string>
    <string name="chapter_string">화</string>
    <string name="cover_upload_title">웹소설 표지</string>
    <string name="cover_upload_info">포맷 JPG,JPEG 파일을 지원 합니다. 최대 크기 5mb 이하</string>
    <string name="cover_upload_button_text">업로드</string>
    <string name="type_string">타입</string>
    <!--sample show text-->
    <string name="sample_category_text">현재 카테고리</string>
    <string name="sample_date_text">현재 날짜 2024.01.01</string>
    <string name="sample_chapter_string">현재 화수</string>
    <string name="sample_type_string">현재 타입</string>
    <string name="sample_summary_text">1 현재 줄거리 현재 줄거리 현재 줄거리 현재 줄거리 현재 줄거리 현재 줄거리 현재 줄거리 2 현재 줄거리 현재 줄거리 현재 줄거리 현재 줄거리 현재 줄거리</string>
    <string name="sample_title_text">현재 제목</string>
    <string name="sample_number">3</string>

    <!--웹소설 등록 화면 text-->
    <string name="make_book">웹소설 생성</string>
    <string name="select_category">카테고리 선택</string>

    <!--type -->
    <string name="type_novel">소설</string>
    <string name="type_NonNovel">비소설</string>


    <string name="app_name">OurBook</string>
    <string name="title_activity_password_email_auth2">password_emailAuthActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tooltip_review">
        \n(글쓰기 품질): 이 항목은 문장 구성, 문법, 어휘 사용, 서술의 명확성 및 전반적인 문체 등 작가의 글쓰기 기술을 평가합니다.
        \n(업데이트 안정성): 작가가 얼마나 규칙적으로 새로운 챕터나 섹션을 게시하는지를 평가합니다.
        \n(이야기 전개): 플롯의 진행 방식, 이야기의 구조,  서사의 흐름 등 이야기가 얼마나 잘 전개되는지를 나타냅니다.
        \n(캐릭터 디자인): 캐릭터의 복잡성, 캐릭터가 얼마나 잘 만들어졌고, 생생하게 묘사되었는지를 의미합니다.
        \n(세계 배경): 소설의 설정, 세계관의 구축, 배경의 상세함 및 이 세계가 얼마나 설득력 있게 묘사되었는지를 평가합니다.
    </string>
    <string name="sample_comment">한글과 영어 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor.</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_book_image_view">BookImageViewActivity</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="title_activity_summary_input">SummaryInputActivity</string>
    <string name="date_indicator">작성 날짜</string>
    <string name="chat_room_create_date_indicator">생성 날짜</string>
    <string name="chat_room_numberPeople">인원수\n</string>
    <string name="chat_lastMessage">마지막 메세지 마지막 메세지 마지막 메세지 마지막 메세지\n마지막 메세지 마지막 메세지 마지막 메세지 마지막 메세지</string>
    <string name="msg_token_fmt">fcm</string>
</resources>