<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".writeActivity.WriteChapterSettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_margin="10sp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:id="@+id/book_info_carView"
        app:cardCornerRadius="20sp"
        app:cardBackgroundColor="@color/white"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10sp"
            >
        <!-- 도서 이미지 업로드 보여 주는 아이템 -->
        <LinearLayout
            android:layout_margin="10sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100sp"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/textView_bookCover_indicator"
                    android:text="@string/cover_upload_title"
                    android:fontFamily="@font/ibm_plex_sans_medium"
                    android:textFontWeight="700"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/cover_upload_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/button_coverImageUpload"
                    android:text="@string/cover_upload_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>
            <!-- 웹소설 표지 이미지 뷰 weight 설정이 감이 안잡힘 -->
            <ImageView
                android:id="@+id/imageView_bookCover"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:src="@drawable/outline_books_24"
                android:layout_weight="0.1"
                />
        </LinearLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/change_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="horizontal"
            >
            <TextView
                android:text="@string/title_text"
                android:fontFamily="@font/ibm_plex_sans_medium"
                android:textFontWeight="700"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/now_title"
                android:layout_gravity="end"
                android:text="@string/sample_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:id="@+id/change_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:orientation="horizontal"
                >

                <TextView
                    android:text="@string/type_string"
                    android:fontFamily="@font/ibm_plex_sans_medium"
                    android:textFontWeight="700"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:id="@+id/now_type"
                    android:layout_gravity="end"
                    android:text="@string/sample_type_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:id="@+id/change_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:orientation="horizontal"
                >
                <TextView
                    android:text="@string/category_text"
                    android:fontFamily="@font/ibm_plex_sans_medium"
                    android:textFontWeight="700"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:id="@+id/now_category"
                    android:layout_gravity="end"
                    android:text="@string/sample_category_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:id="@+id/change_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:orientation="horizontal"
                >
                <TextView
                    android:text="@string/summary_text"
                    android:fontFamily="@font/ibm_plex_sans_medium"
                    android:textFontWeight="700"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/now_summary"
                    android:layout_marginEnd="30sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:layout_gravity="end"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textAlignment="textEnd"
                    android:text="@string/sample_summary_text" />
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/book_delete_cardView"
            app:cardCornerRadius="20sp"
            app:cardBackgroundColor="@color/white">
            <LinearLayout
                android:id="@+id/delete_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:orientation="horizontal"
                >
                <TextView
                    android:text="@string/delete_text"
                    android:fontFamily="@font/ibm_plex_sans_medium"
                    android:textFontWeight="700"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_gravity="end"
                    android:text="@string/delete_book_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</FrameLayout>