<?xml version="1.0" encoding="utf-8"?>
<!--    /* 채팅방 생성 액티비티 */-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory"
    tools:context=".Chat.ChatRoomCreateActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar_chatRoomCreate"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        app:navigationIcon="@drawable/arrow_left_solid"
        app:buttonGravity="center_vertical"
        app:title="@string/chat_create"
        app:titleCentered="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar_chatRoomCreate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/activityCreateChatRoom_CardView"
        android:layout_margin="10sp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout

            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:id="@+id/guideline1"
                app:layout_constraintGuide_percent="0.25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <!--채팅방 이름 입력-->
            <com.google.android.material.textfield.TextInputEditText
                android:layout_margin="10sp"
                app:layout_constraintStart_toEndOf="@id/guideline1"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/chatRoom_nameInput"
                app:layout_constraintEnd_toStartOf="@id/chatRoom_nameCheckBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <!--채팅방 이름 확인 기-->
            <Button
                android:visibility="invisible"
                android:layout_marginVertical="10sp"
                android:text="@string/agree"

                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/chatRoom_nameCheckBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/chatRoom_nameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <!-- 채팅방 이름 네임 변경 기능-->
            <Button
                android:text="@string/change"
                android:visibility="gone"
                android:id="@+id/chatRoom_nameChangeBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/chatRoom_nameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_margin="10sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline1"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/chat_room_name"
                android:id="@+id/ChatRoom_Indicator_nameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_margin="15sp"
                android:id="@+id/ChatRoom_Indicator_webnovel"
                app:layout_constraintTop_toBottomOf="@id/chatRoom_nameInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline1"
                android:text="@string/chat_novel_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/bookCover_imageView"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:maxWidth="50dp"
                android:maxHeight="60dp"
                app:layout_constraintEnd_toStartOf="@+id/ChatRoom_tag"
                app:layout_constraintTop_toTopOf="@id/ChatRoom_tag"
                app:layout_constraintBottom_toBottomOf="@+id/ChatRoom_tag"
                app:layout_constraintStart_toEndOf="@id/guideline1"
                android:contentDescription="BookCover" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ChatRoom_tag"
                app:layout_constraintTop_toTopOf="@id/ChatRoom_ChooseNovel_Btn"
                app:layout_constraintBottom_toBottomOf="@id/ChatRoom_ChooseNovel_Btn"
                app:layout_constraintEnd_toStartOf="@id/ChatRoom_ChooseNovel_Btn"
                app:layout_constraintStart_toEndOf="@id/bookCover_imageView"
                android:text="@string/chat_novel_tag_info"
                android:layout_margin="10sp"
                />
            <Button
                android:visibility="visible"
                android:layout_marginVertical="10sp"
                android:id="@+id/ChatRoom_ChooseNovel_Btn"
                android:text="@string/chat_novel_tag_choose"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/chatRoom_nameInput"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <TextView
                app:layout_constraintTop_toBottomOf="@id/ChatRoom_ChooseNovel_Btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline1"
                android:layout_margin="20sp"
                android:text="@string/chat_room_introduce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chatRoom_Indicator_introduce"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/chatRoom_introduceInputLayout"
                android:layout_margin="10sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ChatRoom_ChooseNovel_Btn">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/chatRoom_introduceInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_sans"
                    android:hint="@string/chat_room_introduce_input"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginVertical="15sp"
                app:layout_constraintTop_toBottomOf="@id/chatRoom_introduceInputLayout"
                app:layout_constraintEnd_toStartOf="@id/guideline1"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/chat_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/password_setting_Btn"
                app:useMaterialThemeColors="true"
                app:layout_constraintBottom_toTopOf="@id/chatRoom_passwordInput"
                app:layout_constraintTop_toBottomOf="@id/chatRoom_introduceInputLayout"
                app:layout_constraintStart_toEndOf="@id/guideline1"
                android:layout_marginHorizontal="10sp"
                android:layout_marginVertical="5sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/chatRoom_passwordInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_marginVertical="15sp"
                android:autofillHints="채팅방에 참가에 필요한 비밀번호 입니다."
                android:visibility="gone"
                android:hint="@string/chat_password_input"
                android:inputType="numberPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/password_setting_Btn" />
            <!-- textView . 채팅방 생성 조건에 맞지 않는 경우 안내문구 출력 TextView -->
            <TextView
                android:textColor="@color/red_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/ChatRoom_createBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                android:layout_marginVertical="10sp"
                app:layout_constraintTop_toBottomOf="@id/chatRoom_passwordInput"
                android:id="@+id/chatRoom_IndicatorText"/>
            <Button
                android:layout_margin="10sp"
                android:id="@+id/ChatRoom_createBtn"
                app:layout_constraintTop_toBottomOf="@+id/chatRoom_passwordInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/chat_create"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>